@@ -1,3 +1,4 @@
+* [Bug 1180] ntpd won't start with more than ~1000 interfaces
 * Stale leapsecond file fixes from Dave Mills.
 (4.2.5p173) 2009/05/08 Released by Harlan Stenn <stenn@ntp.org>
 * Include (4.2.4p7-RC6)
